# etl-excel

./: .pre-commit-config.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
app/: main.py
app/ETL/: __init__.py  extract.py  load.py  pipeline.py  transform.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
data/output/: consolidated_absenteeism_data.xlsx  output.xlsx
docs/: api.md  index.md
search/: search_index.json
tests/: __init__.py  test_integration.py  test_pipeline.py  test_unit.py  unit_testing.py
