[tool.poetry]
name = "project-etl-excel"
version = "0.1.0"
description = "Um simples projeto de ETL para arquivos Execel."
authors = ["Rafael Jürkfitz <rafaeljurkfitz@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
pandas = "^2.2.2"
openpyxl = "^3.1.2"


[tool.poetry.group.docs.dependencies]
mkdocstrings-python = "^1.12.2"
pygments = "^2.18.0"
pymdown-extensions = "^10.12"
mkdocs-bootstrap386 = "^0.0.2"
mkdocs-material = "^9.5.46"
mkdocs = "^1.6.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
pre-commit = "^4.0.1"
pip-audit = "^2.7.3"
pydocstyle = "^6.3.0"
blue = "^0.9.1"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
run = "python app/main.py"
test = "pytest -v"
format = "blue . && isort ."
kill = "kill -9 $(lsof -t -i :8000)"
doc = "mkdocs serve"
